[tool.poetry]
name = "repl_python3_api-gt-services"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^8.10.0"
Flask = "^2.0.1"
Flask-RESTful = "^0.3.9"
pyfaker = "^0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
